# bedrock-guardrails-playground

./: .env.example  .gitignore  Claude.md  Makefile  README.md  hello.py  pyproject.toml
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
datasets/: evaluation_dataset.json
docs/adr/: ADR-001-guardrails-bedrock.md  ADR-002-evaluation-deepeval-langfuse.md  README.md
docs/apply_guardrails/: README.md  apply-guardrail-api-implementation.md  best-practices.md  design-guide.md  resutl_row.txt  streaming-implementation-guide.md
docs/evaluation/: testing-strategy.md
docs/langfuse/: README.md  best-practices.md  evaluation-strategy.md  implementation-guide.md  tracing-overview.md
docs/prompt-caching/: README.md  bedrock-prompt-caching-guide.md
experiments/prompt-caching/: README.md  check_cache_metrics.py  test_basic_caching.py  test_comparison.py
src/: __init__.py  agent.py  bedrock_evaluator.py  examples.py  langfuse_tracer.py  run_evaluation_deepeval.py
terraform/: README.md  STREAMING_GUIDE.md  USAGE.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/examples/: .env.example  README.md  streaming_example.py  streaming_example.py.backup  test_apply_guardrail.py
terraform/examples/docs/apply_guardrails/: implementation-guide.md  streaming-realtime-check-experiment.md
